# diablo_edit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DiabloEdit.pro  Dockerfile.win  LICENSE  Makefile  README.md
.github/workflows/: release.yml
.serena/: project.yml
Diablo Edit2/: D2S_Struct.h  D2Version.h  Diablo Edit2.h  DlgCharBasicInfo.cpp
Generate Data/: language.txt
archive/mfc_original/Diablo Edit2/: D2S_Struct.cpp  D2S_Struct.h  D2Version.h  Diablo Edit2.cpp  DlgCharBasicInfo.cpp
archive/mfc_original/Generate Data/: language.txt
archive/mfc_original/doc/: 待办事项.md  支持暗黑2重制版3.2版本改动方案.md
data/: image_order.txt  itemdata.txt  language.txt  property.txt  property_31.txt
doc/: D2R31开发进度.md  D2R31数据文件升级方案.md  待办事项.md  总体技术架构.md  跨平台重写可行性分析报告.md
doc/3.1空白角色/: testnew.d2s  新手 - 亚马逊.fltr  新手 - 刺客.fltr  新手 - 圣骑士.fltr  新手 - 巫师.fltr  新手 - 德鲁伊.fltr  新手 - 战士.fltr  新手 - 死灵法师.fltr  新手 - 野蛮人.fltr
doc/save-file/2.5/: 2.5.d2s
doc/save-file/3.1/: 小五.d2s  杜五.d2s  杜五_v3.1.d2s  杜仲.d2s
src/: main.cpp
src/core/: BinDataStream.cpp  BinDataStream.h  D2Item.cpp  D2Item.h  D2S_Struct.cpp  D2S_Struct.h  D2Types.h  D2Version.h  DataManagerFwd.h  ImageManager.cpp  ImageManager.h  MayExist.h  MetaData.cpp  MetaData.h  compress_quicklz.h  quicklz.cpp
src/data/: DataManager.cpp  DataManager.h
src/ui/: CharInfoWidget.cpp  CharInfoWidget.h  FoundryDialog.cpp  FoundryDialog.h  ItemGridWidget.cpp  ItemGridWidget.h  ItemTooltip.cpp  ItemTooltip.h  MainWindow.cpp  MainWindow.h  NewItemDialog.cpp  NewItemDialog.h  QuestInfoWidget.cpp  QuestInfoWidget.h  SelectCharDialog.cpp  SelectCharDialog.h  SkillsDialog.cpp  SkillsDialog.h  WaypointsWidget.cpp  WaypointsWidget.h
tests/: CMakeLists.txt  test_utils.cpp  test_utils.h
tests/core/: test_d2item.cpp  test_imagemanager.cpp
tests/ui/: test_itemgridwidget.cpp
tools/: analyze_items.py  analyze_savebits.py  compare_savebits.py  generate_image_order.py  trace_cpp_sim.py  trace_d2s_struct.py  trace_items.py  trace_ps.cpp  verify_savebits.py
tools/build_itemdata/: main.cpp
tools/extract_huffman/: huffman_extract.py  search_v2.py
tools/generate_data/: CMakeLists.txt  main.cpp
tools/generate_itemdata/: generate_itemdata.py
tools/verify_merc/: test_merc.cpp
tools/verify_property/: CMakeLists.txt  main.cpp
